fix chreat char

--- a/public/src/pages/CreateCharacter/styles.css
+++ b/public/src/pages/CreateCharacter/styles.css
@@ -1,12 +1,14 @@
+.create-character-card {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+}
 .create-character {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    background-color: #fff;
-    overflow: scroll;
+    overflow-y: scroll;
     max-height: 90vh;
   }
   
